fixed footer overlap
git-svn-id: https://svn.code.sf.net/p/phpscheduleit/code/development@2431 12d54735-0ee2-4768-9b18-c71e5e561e4c

--- a/Web/css/booked.css
+++ b/Web/css/booked.css
@@ -9,7 +9,7 @@ body {
   height: 100%;
 }
 body {
-  padding-bottom: 50px;
+  padding-bottom: 80px;
   /* this needs to be bigger than footer height*/
 }
 a {
@@ -33,8 +33,7 @@ a {
   color: #fff;
 }
 #main {
-  height: 100%;
-  padding-bottom: 50px;
+  padding-bottom: 80px;
 }
 .default-box {
   padding: 35px;
