--- a/Web/css/less/main.less
+++ b/Web/css/less/main.less
@@ -8,7 +8,7 @@ html, body {
 @footer-height: 50px;
 
 body {
-  padding-bottom: @footer-height; /* this needs to be bigger than footer height*/
+  padding-bottom: @footer-height + 30; /* this needs to be bigger than footer height*/
 }
 
 a {
@@ -22,7 +22,7 @@ a {
   color: #fff;
   font-size: .8em;
   .gradient(@dark-gray, lighten(@dark-gray, 5%), @dark-gray);
-  height: 50px;
+  height: @footer-height;
 }
 
 .footer a {
@@ -30,8 +30,8 @@ a {
 }
 
 #main {
-  height: 100%;
-  padding-bottom: @footer-height;
+//  height: 100%;
+  padding-bottom: @footer-height + 30;
 }
 
 .default-box {
